este es el ejercicio 2

--- a/index.html
+++ b/index.html
@@ -4,29 +4,75 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Ejercicio 1</title>
+    <title>Proyecto 1</title>
   </head>
   <main>
     <body>
       <div>
+        <!--Aca se esta estableciendo la primera seccion de la pagina (ejercicio1)-->
         <section>
-          <!--Aca se esta estableciendo la primera seccion de la pagina (ejercicio1)-->
           <figure>
             <img src="./images/image.png" alt="" />
           </figure>
           <h1>CodiGo</h1>
           <h2>Hola, mi nombre es <br />Aldair Rodriguez</h2>
           <nav>
-              <ul>
-                  <li>
-                      <a href="#">Twitter</a>
-                  </li>
-                  <li>
-                      <a href="#">Facebook</a>
-                  </li>
-              </ul>
+            <ul>
+              <li>
+                <a href="#">Twitter</a>
+              </li>
+              <li>
+                <a href="#">Facebook</a>
+              </li>
+            </ul>
           </nav>
         </section>
+        <!--Aca se termina la primera seccion-->
+        <!--Aca se esta estableciendo la segunda seccion de la pagina (ejercicio 2)-->
+        <section>
+          <h2>My skills</h2>
+          <div>
+            <h3>Html</h3>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <h3>Css</h3>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <h3>Angular</h3>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <h3>Figma</h3>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <h3>Javascript</h3>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <h3>React</h3>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <h3>Python</h3>
+            <div></div>
+            <div></div>
+          </div>
+          <div>
+            <h3>Node.js</h3>
+            <div></div>
+            <div></div>
+          </div>
+        </section>
+        <!--Aca se termina la seccion 2-->
       </div>
     </body>
   </main>
