este es el tercer ejercicio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Proyecto 1</title>
+    <style>
+      .seccion2{
+        background-color: blue;
+      }
+     .seccion3{
+       background-color: crimson;
+     }
+    </style>
   </head>
   <main>
     <body>
@@ -29,7 +37,7 @@
         </section>
         <!--Aca se termina la primera seccion-->
         <!--Aca se esta estableciendo la segunda seccion de la pagina (ejercicio 2)-->
-        <section>
+        <section class="seccion2">
           <h2>My skills</h2>
           <div>
             <h3>Html</h3>
@@ -73,6 +81,35 @@
           </div>
         </section>
         <!--Aca se termina la seccion 2-->
+        <!--Aca se esta estableciendo la tercera seccion de la pagina (ejercicio 3)-->
+        <section class="seccion3">
+          <h2>Servicios</h2>
+          <div>
+            <img src="./images/Vector.png" alt="" />
+            <h3>Diseño web</h3>
+          </div>
+          <div>
+            <img src="./images/Vector.png" alt="" />
+            <h3>Desarrollo web</h3>
+          </div>
+          <div>
+            <img src="./images/Vector.png" alt="" />
+            <h3>Desarrollo Mobile</h3>
+          </div>
+          <div>
+            <img src="./images/Vector.png" alt="" />
+            <h3>Diseño UI</h3>
+          </div>
+          <div>
+            <img src="./images/Vector.png" alt="" />
+            <h3>Diseño UX</h3>
+          </div>
+          <div>
+            <img src="./images/Vector.png" alt="" />
+            <h3>Metodologias Agiles</h3>
+          </div>
+        </section>
+        <!--Aca se acaba la tercera seccion-->
       </div>
     </body>
   </main>
