este es el ejercicio 4

--- a/index.html
+++ b/index.html
@@ -1,116 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Proyecto 1</title>
-    <style>
-      .seccion2{
-        background-color: blue;
-      }
-     .seccion3{
-       background-color: crimson;
-     }
-    </style>
-  </head>
-  <main>
-    <body>
-      <div>
-        <!--Aca se esta estableciendo la primera seccion de la pagina (ejercicio1)-->
-        <section>
-          <figure>
-            <img src="./images/image.png" alt="" />
-          </figure>
-          <h1>CodiGo</h1>
-          <h2>Hola, mi nombre es <br />Aldair Rodriguez</h2>
-          <nav>
-            <ul>
-              <li>
-                <a href="#">Twitter</a>
-              </li>
-              <li>
-                <a href="#">Facebook</a>
-              </li>
-            </ul>
-          </nav>
-        </section>
-        <!--Aca se termina la primera seccion-->
-        <!--Aca se esta estableciendo la segunda seccion de la pagina (ejercicio 2)-->
-        <section class="seccion2">
-          <h2>My skills</h2>
-          <div>
-            <h3>Html</h3>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <h3>Css</h3>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <h3>Angular</h3>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <h3>Figma</h3>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <h3>Javascript</h3>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <h3>React</h3>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <h3>Python</h3>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <h3>Node.js</h3>
-            <div></div>
-            <div></div>
-          </div>
-        </section>
-        <!--Aca se termina la seccion 2-->
-        <!--Aca se esta estableciendo la tercera seccion de la pagina (ejercicio 3)-->
-        <section class="seccion3">
-          <h2>Servicios</h2>
-          <div>
-            <img src="./images/Vector.png" alt="" />
-            <h3>Diseño web</h3>
-          </div>
-          <div>
-            <img src="./images/Vector.png" alt="" />
-            <h3>Desarrollo web</h3>
-          </div>
-          <div>
-            <img src="./images/Vector.png" alt="" />
-            <h3>Desarrollo Mobile</h3>
-          </div>
-          <div>
-            <img src="./images/Vector.png" alt="" />
-            <h3>Diseño UI</h3>
-          </div>
-          <div>
-            <img src="./images/Vector.png" alt="" />
-            <h3>Diseño UX</h3>
-          </div>
-          <div>
-            <img src="./images/Vector.png" alt="" />
-            <h3>Metodologias Agiles</h3>
-          </div>
-        </section>
-        <!--Aca se acaba la tercera seccion-->
-      </div>
-    </body>
-  </main>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Proyecto 1</title>
+  <style>
+    .seccion2 {
+      background-color: #7299FE;
+    }
+
+    .seccion3 {
+      background-color: #FB7171;
+    }
+    .seccion4 {
+      background-color:#FFD233;
+      
+    }
+    .portafolio{
+      color:#FFFFFF;
+    }
+  </style>
+</head>
+<main>
+
+  <body>
+    <div>
+      <!--Aca se esta estableciendo la primera seccion de la pagina (ejercicio1)-->
+      <section>
+        <figure>
+          <img src="./images/image.png" alt="" />
+        </figure>
+        <h1>CodiGo</h1>
+        <h2>Hola, mi nombre es <br />Aldair Rodriguez</h2>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Twitter</a>
+            </li>
+            <li>
+              <a href="#">Facebook</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <!--Aca se termina la primera seccion-->
+      <!--Aca se esta estableciendo la segunda seccion de la pagina (ejercicio 2)-->
+      <section class="seccion2">
+        <h2>My skills</h2>
+        <div>
+          <h3>Html</h3>
+          <div></div>
+          <div></div>
+        </div>
+        <div>
+          <h3>Css</h3>
+          <div></div>
+          <div></div>
+        </div>
+        <div>
+          <h3>Angular</h3>
+          <div></div>
+          <div></div>
+        </div>
+        <div>
+          <h3>Figma</h3>
+          <div></div>
+          <div></div>
+        </div>
+        <div>
+          <h3>Javascript</h3>
+          <div></div>
+          <div></div>
+        </div>
+        <div>
+          <h3>React</h3>
+          <div></div>
+          <div></div>
+        </div>
+        <div>
+          <h3>Python</h3>
+          <div></div>
+          <div></div>
+        </div>
+        <div>
+          <h3>Node.js</h3>
+          <div></div>
+          <div></div>
+        </div>
+      </section>
+      <!--Aca se termina la seccion 2-->
+      <!--Aca se esta estableciendo la tercera seccion de la pagina (ejercicio 3)-->
+      <section class="seccion3">
+        <h2>Servicios</h2>
+        <div>
+          <img src="./images/Vector.png" alt="" />
+          <h3>Diseño web</h3>
+        </div>
+        <div>
+          <img src="./images/Vector.png" alt="" />
+          <h3>Desarrollo web</h3>
+        </div>
+        <div>
+          <img src="./images/Vector.png" alt="" />
+          <h3>Desarrollo Mobile</h3>
+        </div>
+        <div>
+          <img src="./images/Vector.png" alt="" />
+          <h3>Diseño UI</h3>
+        </div>
+        <div>
+          <img src="./images/Vector.png" alt="" />
+          <h3>Diseño UX</h3>
+        </div>
+        <div>
+          <img src="./images/Vector.png" alt="" />
+          <h3>Metodologias Agiles</h3>
+        </div>
+      </section>
+      <!--Aca se acaba la tercera seccion-->
+      <!--Aca empieza la cuarta seccion de la pagina (ejercicio4)-->
+      <section class="seccion4">
+        <h2 class="portafolio">Portafolio</h2>
+        <figure>
+          <img src="./images/portafolio1.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/portafolio2.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/portafolio3.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/portafolio4.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/portafolio5.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/portafolio6.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/portafolio7.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/portafolio8.png" alt="">
+        </figure>
+      </section>
+      <!--Aca termina la cuarta seccion-->
+    </div>
+  </body>
+</main>
+
 </html>
