--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
     .portafolio{
       color:#FFFFFF;
     }
+    .seccion5{
+      background-color: #3F4E62;
+    }
+    .clientes{
+      color: #FFFFFF;
+      
+    }
   </style>
 </head>
 <main>
@@ -149,6 +156,23 @@
         </figure>
       </section>
       <!--Aca termina la cuarta seccion-->
+      <!--Aca empieza la quinta seccion de la pagina (ejercicio5)-->
+      <section class="seccion5">
+        <h2 class="clientes">Clientes</h2>
+        <figure>
+          <img src="./images/clientes1.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/clientes2.png" alt="">
+        </figure>
+        <figure>
+          <img src="./images/clientes3.png" alt="">
+        </figure>
+        <figure>
+           <img src="./images/clientes4.png" alt="">
+        </figure>
+      </section>
+      <!--Aca termina la quinta seccion-->
     </div>
   </body>
 </main>
