este es el ejercicio 6

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
       color: #FFFFFF;
       
     }
+    .seccion6{
+      background-color: #16A085;
+    }
+    .contacto{
+      color: #FFFFFF;
+    }
   </style>
 </head>
 <main>
@@ -173,6 +179,23 @@
         </figure>
       </section>
       <!--Aca termina la quinta seccion-->
+      <!--Aca empieza la sexta seccion de la pagina (ejercicio6)-->
+      <section class="seccion6">
+        <h2 class="contacto">Contacto</h2>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Enviar</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <!--Aca termina la sexta seccion-->
     </div>
   </body>
 </main>
