--- a/index.html
+++ b/index.html
@@ -7,45 +7,59 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Proyecto 1</title>
   <style>
-    .seccion2 {
+    .skills {
       background-color: #7299FE;
     }
 
-    .seccion3 {
+    .skills .title {
+      color: #FFFFFF;
+    }
+
+    .services {
       background-color: #FB7171;
     }
-    .seccion4 {
-      background-color:#FFD233;
-      
+
+    .services .title {
+      color: #FFFFFF
     }
-    .portafolio{
-      color:#FFFFFF;
+
+    .portfolio {
+      background-color: #FFD233;
+
     }
-    .seccion5{
+
+    .portfolio .title {
+      color: #FFFFFF;
+    }
+
+    .clients {
       background-color: #3F4E62;
     }
-    .clientes{
+
+    .clients .title {
       color: #FFFFFF;
-      
+
     }
-    .seccion6{
+
+    .contact {
       background-color: #16A085;
     }
-    .contacto{
+
+    .contact .title {
       color: #FFFFFF;
     }
   </style>
 </head>
-<main>
 
-  <body>
-    <div>
-      <!--Aca se esta estableciendo la primera seccion de la pagina (ejercicio1)-->
-      <section>
-        <figure>
-          <img src="./images/image.png" alt="" />
-        </figure>
+<body>
+  <div class="wrapper">
+    <main>
+      <!--Banner-->
+      <section class="banner">
         <h1>CodiGo</h1>
+        <figure>
+          <img src="./images/image.png" width="960" height="525" alt="banner" />
+        </figure>
         <h2>Hola, mi nombre es <br />Aldair Rodriguez</h2>
         <nav>
           <ul>
@@ -58,146 +72,151 @@
           </ul>
         </nav>
       </section>
-      <!--Aca se termina la primera seccion-->
-      <!--Aca se esta estableciendo la segunda seccion de la pagina (ejercicio 2)-->
-      <section class="seccion2">
-        <h2>My skills</h2>
-        <div>
-          <h3>Html</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Css</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Angular</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Figma</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Javascript</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>React</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Python</h3>
-          <div></div>
-          <div></div>
-        </div>
-        <div>
-          <h3>Node.js</h3>
-          <div></div>
-          <div></div>
-        </div>
-      </section>
-      <!--Aca se termina la seccion 2-->
-      <!--Aca se esta estableciendo la tercera seccion de la pagina (ejercicio 3)-->
-      <section class="seccion3">
-        <h2>Servicios</h2>
-        <div>
-          <img src="./images/Vector.png" alt="" />
-          <h3>Diseño web</h3>
-        </div>
-        <div>
-          <img src="./images/Vector.png" alt="" />
-          <h3>Desarrollo web</h3>
-        </div>
-        <div>
-          <img src="./images/Vector.png" alt="" />
-          <h3>Desarrollo Mobile</h3>
-        </div>
-        <div>
-          <img src="./images/Vector.png" alt="" />
-          <h3>Diseño UI</h3>
-        </div>
-        <div>
-          <img src="./images/Vector.png" alt="" />
-          <h3>Diseño UX</h3>
-        </div>
-        <div>
-          <img src="./images/Vector.png" alt="" />
-          <h3>Metodologias Agiles</h3>
+      <!--Skills-->
+      <section class="skills">
+        <h2 class="skills title">My skills</h2>
+        <div class="percentage">
+          <div class="bar-title">
+            <h3>Html</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Css</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Angular</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Figma</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Javascript</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>React</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Python</h3>
+            <div class="bar">
+              <div></div>
+            </div>
+          </div>
+          <div class="bar-title">
+            <h3>Node.js</h3>
+            <divc class="bar">
+              <div></div>
+          </div>
         </div>
       </section>
-      <!--Aca se acaba la tercera seccion-->
-      <!--Aca empieza la cuarta seccion de la pagina (ejercicio4)-->
-      <section class="seccion4">
-        <h2 class="portafolio">Portafolio</h2>
-        <figure>
-          <img src="./images/portafolio1.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/portafolio2.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/portafolio3.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/portafolio4.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/portafolio5.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/portafolio6.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/portafolio7.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/portafolio8.png" alt="">
-        </figure>
+      <!--Services-->
+      <section class="services">
+        <h2 class="services title">Servicios</h2>
+        <div class="items">
+          <div class="item">
+            <img src="./images/Vector.png" alt="" />
+            <h3>Diseño web</h3>
+          </div>
+          <div class="item">
+            <img src="./images/Vector.png" alt="" />
+            <h3>Desarrollo web</h3>
+          </div>
+          <div class="item">
+            <img src="./images/Vector.png" alt="" />
+            <h3>Desarrollo Mobile</h3>
+          </div>
+          <div class="item">
+            <img src="./images/Vector.png" alt="" />
+            <h3>Diseño UI</h3>
+          </div>
+          <div class="item">
+            <img src="./images/Vector.png" alt="" />
+            <h3>Diseño UX</h3>
+          </div>
+          <div class="item">
+            <img src="./images/Vector.png" alt="" />
+            <h3>Metodologias Agiles</h3>
+          </div>
+        </div>
       </section>
-      <!--Aca termina la cuarta seccion-->
-      <!--Aca empieza la quinta seccion de la pagina (ejercicio5)-->
-      <section class="seccion5">
-        <h2 class="clientes">Clientes</h2>
-        <figure>
-          <img src="./images/clientes1.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/clientes2.png" alt="">
-        </figure>
-        <figure>
-          <img src="./images/clientes3.png" alt="">
-        </figure>
-        <figure>
-           <img src="./images/clientes4.png" alt="">
-        </figure>
+      <!--portfolio-->
+      <section class="portfolio">
+        <h2 class="portfolio title">Portafolio</h2>
+        <div class="items">
+          <figure>
+            <img src="./images/portafolio1.png" width="140" height="92" alt="one" />
+          </figure>
+          <figure>
+            <img src="./images/portafolio2.png" width="140" height="92" alt="two" />
+          </figure>
+          <figure>
+            <img src="./images/portafolio3.png" width="140" height="92" alt="three" />
+          </figure>
+          <figure>
+            <img src="./images/portafolio4.png" width="140" height="92" alt="four" />
+          </figure>
+          <figure>
+            <img src="./images/portafolio5.png" width="140" height="92" alt="five" />
+          </figure>
+          <figure>
+            <img src="./images/portafolio6.png" width="140" height="92" alt="six" />
+          </figure>
+          <figure>
+            <img src="./images/portafolio7.png" width="140" height="92" alt="seven" />
+          </figure>
+          <figure>
+            <img src="./images/portafolio8.png" width="140" height="92" alt="eight" />
+          </figure>
+        </div>
       </section>
-      <!--Aca termina la quinta seccion-->
-      <!--Aca empieza la sexta seccion de la pagina (ejercicio6)-->
-      <section class="seccion6">
-        <h2 class="contacto">Contacto</h2>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">Enviar</a>
-            </li>
-          </ul>
-        </nav>
+      <!--Clientes-->
+      <section class="clients">
+        <h2 class="clients title">Clientes</h2>
+        <div class="items">
+          <figure>
+            <img src="./images/clientes1.png" width="178" height="67" alt="one">
+          </figure>
+          <figure>
+            <img src="./images/clientes2.png" width="202" height="54" alt="one">
+          </figure>
+          <figure>
+            <img src="./images/clientes3.png" width="178" height="69" alt="one">
+          </figure>
+          <figure>
+            <img src="./images/clientes4.png" width="194" height="67" alt="one">
+          </figure>
+        </div>
       </section>
-      <!--Aca termina la sexta seccion-->
-    </div>
-  </body>
-</main>
+      <!--contacto-->
+      <section class="contact">
+        <h2 class="contact title">Contacto</h2>
+        <form class="form">
+          <input class="ctrl" type="text" placeholder="nombre" />
+          <input class="ctrl" type="text" placeholder="apellido" />
+          <input class="ctrl" type="email" placeholder="email" />
+          <input class="ctrl" type="text" placeholder="telefono" />
+          <textarea placeholder="descripcion"></textarea>
+          <button type="submit">Enviar</button>
+        </form>
+      </section>
+    </main>
+  </div>
+</body>
 
 </html>
